# rest-graphql

./: .dockerignore  .env.example  .gitignore  MONITORING.md  QUICKSTART.md  README.md  docker-compose.base.yml  docker-compose.case1.yml  docker-compose.case2.yml  docker-compose.case3.yml  docker-compose.full.yml
backend/graphql/services/robot-service/: .dockerignore  Dockerfile  pyproject.toml
backend/graphql/services/robot-service/src/: __init__.py  main.py
backend/graphql/services/robot-service/src/core/: config.py  logging.py
backend/graphql/services/robot-service/src/data/: __init__.py  dataloader.py  repository.py
backend/graphql/services/robot-service/src/models/: __init__.py  robot.py
backend/graphql/services/robot-service/src/schema/: __init__.py  mutations.py  queries.py  types.py
backend/graphql/services/user-service/: Dockerfile  pyproject.toml  requirements.txt
backend/graphql/services/user-service/src/: __init__.py  main.py
backend/graphql/services/user-service/src/core/: config.py  logging.py
backend/graphql/services/user-service/src/data/: __init__.py  repository.py
backend/graphql/services/user-service/src/models/: __init__.py  user.py
backend/graphql/services/user-service/src/schema/: __init__.py  mutations.py  queries.py  types.py
docs/: architecture.md  concept.md
k6/: case1-rest.js  case2-strawberry.js  case3-apollo.js  common.js
k6-test/: Dockerfile  README.md  docker-compose.k6.yml  k6-graphql.js  k6-rest.js
load-test/: Dockerfile  docker-compose.loadtest.yml  locustfile_graphql.py  locustfile_rest.py  requirements.txt  (+1 more)
(+132 files in other folders)
